fix: use slash Conver Windows backslash paths to slash paths foo\\bar -> foo/bar

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/router": "12.2.13",
     "@ngneat/transloco": "^2.22.0",
     "primeng": "12.2.2",
-    "rxjs": "6.6.3"
+    "rxjs": "6.6.3",
+    "slash": "^4.0.0"
   }
 }
